# app/Http/Resources/ProfileResource.php
@@ -1,0 +1,30 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+/**
+ * @mixin \App\Models\Profile
+ */
+class ProfileResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        $data = [
+            'id' => $this->id,
+            'first_name' => $this->first_name,
+            'last_name' => $this->last_name,
+            'image' => $this->image,
+        ];
+        if (auth()->user()){
+            $data['status'] = $this->status;
+        }
+        return $data;
+    }
+}
